small changes in console and names

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "run": "node ./runners/murmurhash/run/index.js",
-    "runChildProcess": "node ./runners/murmurhash/runChildProcess/index.js",
-    "runCluster": "node ./runners/murmurhash/runCluster/index.js",
-    "runWorkerThreads": "node ./runners/murmurhash/runWorkerThreads/index.js",
+    "runMurmurhash": "node ./runners/murmurhash/run/index.js",
+    "runMurmurhashChildProcess": "node ./runners/murmurhash/runChildProcess/index.js",
+    "runMurmurhashCluster": "node ./runners/murmurhash/runCluster/index.js",
+    "runMurmurhashWorkerThreads": "node ./runners/murmurhash/runWorkerThreads/index.js",
     "runBcrypt": "node ./runners/bcrypt/run/index.js",
     "runBcryptChildProcess": "node ./runners/bcrypt/runChildProcess/index.js",
     "runBcryptCluster": "node ./runners/bcrypt/runCluster/index.js",
