--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "runBcryptAsyncThreadPoolSize": "UV_THREADPOOL_SIZE=8 node ./runners/bcryptAsync/run/index.js",
     "runBcryptAsyncChildProcessThreadPoolSize": "UV_THREADPOOL_SIZE=8 node ./runners/bcryptAsync/runChildProcess/index.js",
     "runBcryptAsyncClusterThreadPoolSize": "UV_THREADPOOL_SIZE=8 node ./runners/bcryptAsync/runCluster/index.js",
-    "runBcryptAsyncWorkerThreadsThreadPoolSize": "UV_THREADPOOL_SIZE=8 node ./runners/bcryptAsync/runWorkerThreads/index.js"
+    "runBcryptAsyncWorkerThreadsThreadPoolSize": "UV_THREADPOOL_SIZE=8 node ./runners/bcryptAsync/runWorkerThreads/index.js",
+    "runXlsx": "node ./runners/xlsx/run/index.js",
+    "runXlsxChildProcess": "node ./runners/xlsx/runChildProcess/index.js",
+    "runXlsxCluster": "node ./runners/xlsx/runCluster/index.js",
+    "runXlsxWorkerThreads": "node ./runners/xlsx/runWorkerThreads/index.js"
   },
   "gypfile": true,
   "main": "index.js",
@@ -26,10 +30,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "microseconds": "^0.2.0",
     "murmurhash-native": "^3.4.1",
-    "murmurhash3js": "^3.0.1"
+    "murmurhash3js": "^3.0.1",
+    "xlsx": "^0.16.6",
+    "xlsx-util": "0.0.16"
   }
 }
