--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "runBcryptAsyncChildProcessThreadPoolSize": "UV_THREADPOOL_SIZE=8 node ./runners/bcryptAsync/runChildProcess/index.js",
     "runBcryptAsyncClusterThreadPoolSize": "UV_THREADPOOL_SIZE=8 node ./runners/bcryptAsync/runCluster/index.js",
     "runBcryptAsyncWorkerThreadsThreadPoolSize": "UV_THREADPOOL_SIZE=8 node ./runners/bcryptAsync/runWorkerThreads/index.js",
+    "runArgon2": "node ./runners/argon2/run/index.js",
+    "runArgon2ChildProcess": "node ./runners/argon2/runChildProcess/index.js",
+    "runArgon2Cluster": "node ./runners/argon2/runCluster/index.js",
+    "runArgon2WorkerThreads": "node ./runners/argon2/runWorkerThreads/index.js",
     "runXlsx": "node ./runners/xlsx/run/index.js",
     "runXlsxChildProcess": "node ./runners/xlsx/runChildProcess/index.js",
     "runXlsxCluster": "node ./runners/xlsx/runCluster/index.js",
     "runXlsxWorkerThreads": "node ./runners/xlsx/runWorkerThreads/index.js",
-    "runArgon2": "node ./runners/argon2/run/index.js",
-    "runArgon2ChildProcess": "node ./runners/argon2/runChildProcess/index.js",
-    "runArgon2Cluster": "node ./runners/argon2/runCluster/index.js",
-    "runArgon2WorkerThreads": "node ./runners/argon2/runWorkerThreads/index.js"
+    "runJsonnet": "node ./runners/jsonnet/run/index.js",
+    "runJsonnetChildProcess": "node ./runners/jsonnet/runChildProcess/index.js",
+    "runJsonnetCluster": "node ./runners/jsonnet/runCluster/index.js",
+    "runJsonnetWorkerThreads": "node ./runners/jsonnet/runWorkerThreads/index.js"
   },
   "gypfile": true,
   "main": "index.js",
@@ -34,6 +38,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@rbicker/jsonnet": "^0.1.1-0.12.1",
+    "@unboundedsystems/jsonnet": "^0.9.4-rc6",
     "argon2-browser": "^1.18.0",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
